src/components/BackOffice/OrderDetails.css
.sidebar-order-details-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.sidebar-order-details-container .order-details-header {
  text-align: center;
  font-weight: bold;
  font-size: 1.3em;
}

.sidebar-order-details {
  width: 100%;
  font-size: 14px;
  padding: 0.5em;
  border-top: 1px solid #2e2e2e;
  border-bottom: 1px solid #2e2e2e;
}

.sidebar-order-details ul li:nth-child(2) p {
  padding: 0;
  text-align: end;
  margin: 0;
}

.sidebar-order-details ul {
  margin: 0;
  padding: 0;
}

.sidebar-order-details ul li {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin: 1em 0;
}

.status {
  display: flex;
  align-items: center;
}

.pay-status {
  margin: 0;
}

.order-details-btn button {
  margin: 0 0.5em;
}

.sidebar-order-details .order-details-btn .order-cancel {
  background: #d4414e;
  color: #fff;
}

.sidebar-order-details .order-details-btn .order-accept {
  background: #ffcc33;
}

.order-details-product-container {
  width: 100%;
  overflow: auto;
  margin: 0.2em;
}

.order-details-product {
  width: calc(100% - 1em);
  border-radius: 2px;
  overflow: visible;
  box-shadow: 0px 0px 5px 0 #969496;
  margin: 1em auto;
  padding: 0.5em;
}

.order-details-product-details {
  display: flex;
  justify-content: space-between;
}

.order-details-product-details p {
  margin: 0;
  margin: .5em 0;
}

.order-details-product-details p:first-of-type {
  width: 40%;
  font-weight: bold;
}

.order-details-product-details p:last-of-type {
  width: 55%;
  text-align: end;
}

